--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,6 @@
-org.gradle.jvmargs=-Xmx4G
+# Memory ko 1.5GB se barha kar 2GB kar diya gaya hai
+org.gradle.jvmargs=-Xmx2048M
+
+# Baaqi lines waisi hi rehne dein
 android.useAndroidX=true
 android.enableJetifier=true
